# ToTheTopTesting

./: .gitignore  CMakeLists.txt  How to Run.docx  README.md  Useful.cpp  Useful.h  basegame.cpp  coin.cpp  config.cpp  config.h  config.yaml  header.h  main.cpp  settings.h  stats.cpp  ways.cpp
